# wildbird.rs

./: Cargo.toml  DEV.md  README.md  test.sh
.cargo/: config.toml
src/: block.rs  callback.rs  inject.rs  lazy.rs  lib.rs  lock.rs  metric.rs  prelude.rs  private.rs  thread.rs  threads.rs  tools.rs
tests/: callback_test.rs  channel_test.rs  inject_construct_test.rs  inject_test.rs  lazy_macro.rs  s_construct_method.rs  s_construct_method_async.rs  s_macro.rs  s_macro_async.rs  s_threads_use.rs  test_derive.rs  test_service_marcro.rs  test_service_marcro_construct_method.rs  test_service_marcro_threads.rs  var_macro.rs  var_macro_async.rs
