[package]
name = "wildbird"
version = "0.0.9"
edition = "2021"
description = "Rust Framework"
license = "MIT"
rust-version = "1.70"

[features]
tokio = ["dep:tokio"]

[dependencies]
wildbird_macro_derive = { path = "./bin/wildbird_macro_derive", version = "0.0.9" }
futures-lite = "1.13.0"
tokio = {version = "1.28.2", features = ["signal", "rt-multi-thread"], optional = true}

[dev-dependencies]
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}

[workspace]
members = [
    "./bin/wildbird_macro_derive"
]

[profile.dev]
opt-level = 0
debug = 0
incremental = true

[profile.release]
opt-level = 3
debug = 0
lto = "thin"
