[package]
name = "wildbird"
version = "0.0.10"
edition = "2021"
description = "Rust Framework"
license = "MIT"
rust-version = "1.70"

exclude = [
    "DEV.md",
    "tests/*",
    ".cargo/*",
    "**/.gitignore"
]

[features]
default = []
tokio = ["dep:tokio"]
rayon = ["dep:rayon"]
timed-log = ["dep:log"]
timed-tracing = ["dep:tracing"]

[dependencies]
wildbird_macro_derive = { path = "./bin/wildbird_macro_derive", version = "0.0.10" }
futures-lite = "2"
tokio = {version = "1", features = ["signal", "rt-multi-thread", "time"], optional = true}
rayon = {version = "1.8", optional = true}
log = {version = "0.4", optional = true}
tracing = {version = "0.1", optional = true}

[dev-dependencies]
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread", "time"]}
simplelog = "0.12.1"
tracing-subscriber = "0.3"

[workspace]
members = [
    "./bin/wildbird_macro_derive"
]

[profile.dev]
opt-level = 0
debug = 0
incremental = true

[profile.release]
opt-level = 3
debug = 0
lto = "thin"
